[package]
name = "eth_address"
version = "0.1.0"
authors = ["aeseth <admin@github.xyz>"]
edition = "2021"

[dependencies]
async-std = "1.12.0"
clap = { version = "4.0.29", features = ["derive"] }
hex = "0.4.3"
libsecp256k1 = "0.7.1"
num_cpus = "1.14.0"
rand = "0.8.5"
sha3 = "0.10.6"

[dev-dependencies]
proc-macro2 = "1.0.47"

