[package]
name = "ethkey"
version = "0.2.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
rand = "0.3.14"
lazy_static = "1.4.0"
tiny-keccak = { version = "2.0.2", features = ["keccak", "shake", "sha3", "cshake", "kmac", "tuple_hash", "parallel_hash"] }
eth-secp256k1 = "0.5.7"
rustc-serialize = "0.3.24"
docopt = { version = "1.1.1", optional = true }

[features]
default = ["cli"]
cli = ["docopt"]

[[bin]]
name = "ethkey"
path = "src/bin/main.rs"
doc = false
