[package]
name = "ethkey"
version = "0.2.0"
authors = ["debris <marek.kotewicz@gmail.com>"]

[dependencies]
rand = "0.8.4"
lazy_static = "1.4.0"
tiny-keccak = "2.0.2"
eth-secp256k1 = { git = "https://github.com/ethcore/rust-secp256k1" }
rustc-serialize = "0.3"
docopt = { version = "1.1.1", optional = true }

[features]
default = ["cli"]
cli = ["docopt"]

[[bin]]
name = "ethkey"
path = "src/bin/main.rs"
doc = false
